Added the 'icon img' for each weather forecast day to display in the HTML

--- a/02-Challenge/index.html
+++ b/02-Challenge/index.html
@@ -29,8 +29,7 @@
             <div class="card-body">
               <h5 class="card-title" id="city-name-one"></h5>
               <ul class="list-group list-group-flush">
-                <li class="list-group-item" id="iconMain">  <img src="http://openweathermap.org/img/wn/04n.png" alt="Weather Icon">
-                </li>
+                <li class="list-group-item" id="iconMain"> </li>
                 <li class="list-group-item" id="temp-one"></li>
                 <li class="list-group-item" id="wind-one"></li>
                 <li class="list-group-item" id="humidity-one"></li>
